<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="error">Une erreur est survenue</string>
    <string name="error_no_internet_connection">Aucune connexion Internet</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="retry">Réessayer</string>
    <string name="abbreviation_not_available">ND</string>
    <string name="session_fall">Automne</string>
    <string name="session_winter">Hiver</string>
    <string name="session_summer">Été</string>
    <string name="session_without">Sans trimestre</string>
    <string name="oss_license_title" tools:ignore="MissingTranslation">Licences des logiciels libres</string>
    <string name="title_schedule">Horaire</string>
    <string name="title_student">Étudiant</string>
    <string name="title_dashboard">Accueil</string>
    <string name="title_ets">ÉTS</string>
    <string name="title_more">Plus</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_universal_code">Code universel</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="error_invalid_universal_code">Le code universel est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est erroné</string>
    <string name="error_incorrect_password">Le mot de passe est erroné</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="info_universal_code">Votre code d\'accès universel est sous la forme AB12345. Celui-ci vous a été transmis par le Bureau du registraire lors de votre admission.</string>
    <string name="msg_logout_success">Vous vous êtes déconnecté</string>
    <string name="label_login_applets_logo">Conçue par</string>
    <string name="password_forgotten">Mot de passe oublié?</string>
    <string name="title_grades">Notes</string>
    <string name="msg_no_grades">Aucune note disponible</string>
    <string name="label_current_rating">Votre note</string>
    <string name="label_average">Moyenne</string>
    <string name="text_grade_in_percentage">%1$s %%</string>
    <string name="text_grade_with_percentage">%1$s/%2$s (%3$s %%)</string>
    <string name="text_weight">Pondération : %1$s %%</string>
    <string name="label_group">Groupe</string>
    <string name="label_grade">Note</string>
    <string name="label_median">Médiane</string>
    <string name="label_standard_deviation">Écart-type</string>
    <string name="label_percentile_rank">Rang centile</string>
    <string name="label_target_date">Date cible</string>
    <string name="title_ignored_evaluation">Évaluation ignorée</string>
    <string name="text_ignored_evaluation">Cette évaluation est ignorée dans le calcul de la note finale. Cette situation se produit quand l\'enseignant a décidé de conserver, par exemple, les trois meilleures notes des six devoirs qu\'il a demandés. Les trois notes les plus faibles seront alors ignorées.</string>
    <string name="error_failed_to_retrieve_data_course">Échec de la récupération des données de ce cours</string>
    <string name="title_section_summary">Sommaire</string>
    <string name="title_section_evaluations">Évaluations</string>
    <string name="text_group">Groupe %1$s</string>
    <string name="error_course_evaluations_not_completed">Vous n\'aurez pas accès à vos notes au cours de la période d\'évaluation tant que vous n\'aurez pas effectue vos évaluations.</string>
    <string name="title_profile">Profil</string>
    <string name="title_student_status_profile">État du dossier étudiant</string>
    <string name="title_personal_information_profile">Informations personnelles</string>
    <string name="label_first_name_profile">Prénom</string>
    <string name="label_last_name_profile">Nom de famille</string>
    <string name="label_permanent_code_profile">Code permanent</string>
    <string name="label_balance_profile">Solde</string>
    <string name="label_code_program_profile">Code</string>
    <string name="label_average_program_profile">Moyenne</string>
    <string name="label_number_accumulated_credits_program_profile">Crédits complétés</string>
    <string name="label_number_registered_credits_program_profile">Crédits inscrits</string>
    <string name="label_number_completed_courses_program_profile">Cours réussis</string>
    <string name="label_number_failed_courses_program_profile">Cours échoués</string>
    <string name="label_number_equivalent_courses_program_profile">Cours d\'équivalence</string>
    <string name="label_status_program_profile">Statut</string>
    <string name="title_security">Securité</string>
    <string name="title_monets">MonÉTS</string>
    <string name="title_bibliotech">Bibliotech</string>
    <string name="more_item_label_faq">FAQ</string>
    <string name="more_item_label_about_applets">À propos d\'ApplETS</string>
    <string name="more_item_report_bug">Rapporter un bogue</string>
    <string name="more_item_label_log_out">Se déconnecter</string>
    <string name="more_item_open_source_licenses">@string/oss_license_title</string>
    <string name="prompt_log_out_confirmation">Êtes-vous certain de vouloir vous déconnecter?</string>
    <string name="more_label_log_out_progress">Déconnexion en cours</string>
    <string name="applets_about">ÉTSMobile a été réalisée par le club scientifique ApplETS de l\'École de technologie supérieure.\n\nApplETS se veut, avant tout, un regroupement d’étudiants qui partagent un intérêt commun pour le domaine des télécommunications et des applications mobiles.
        La mission d\'ApplETS est de former les étudiants au développement mobile et de promouvoir la production d\'applications mobiles au sein de la communauté étudiante.\n\nSuivez-nous sur : </string>
    <string name="msg_no_seances">Aucune séance de cours pour la session actuelle</string>
    <string name="screenshot_annotator_activity_label" tools:override="true">Capture d\'écran</string>
    <string name="what_happened_edit_text" tools:override="true">Que s\'est-il passé?</string>
    <string name="summary_field_title" tools:override="true">Que s\'est-il passé?</string>
    <string name="sending_toast" tools:override="true">Soumission du rapport de bogue…</string>
    <string name="thanks_for_filing_a_bug" tools:override="true">Merci d\'avoir rapporté un bogue</string>
    <string name="error_unable_to_read_screenshot" tools:override="true">Oups! La capture d\'écran n\'a put être effectuée.</string>
    <string name="help_us_make_this_app_better" tools:override="true">Aidez-nous à améliorer cette application!</string>
    <string name="report_a_bug" tools:override="true">Rapporter un bogue</string>
    <string name="cancel" tools:override="true">Annuler</string>
    <string name="next" tools:override="true">Suivant</string>
    <string name="send" tools:override="true">Envoyer</string>
    <string name="error_dialog_title" tools:override="true">Oops!</string>
    <string name="error_dialog_message" tools:override="true">Une erreur est survenue pendant la soumission de votre rapport de bogue. Veuillez réessayer.</string>
    <string name="error_dialog_message_check_logs" tools:override="true">Une erreur est survenue pendant la soumission de votre rapport de bogue. Si vous êtes un développeur, veuillez consulter les logs.</string>
    <string name="error_serialize_report" tools:override="true">Échec de la sérialisation du rapport de bogue.</string>
    <string name="error_process_report" tools:override="true">Une erreur est survenue lors du traitement du rapport de bogue!</string>
    <string name="error_save_screenshot" tools:override="true">Une erreur est survenue lors de la sauvegarde du capture d\'écran.</string>
    <string name="buglife_email">Adresse courriel</string>
    <string name="buglife_reproducibility">Reproductibilité</string>
    <string-array name="buglife_reproducibility_levels">
        <item>Toujours</item>
        <item>Parfois</item>
        <item>Rarement</item>
    </string-array>
    <string name="buglife_steps_to_reproduce">Étapes pour reproduire</string>
    <string-array name="security_type">
        <item>Appel à la bombe</item>
        <item>Colis suspect</item>
        <item>Évacuation</item>
        <item>Fuite de gaz</item>
        <item>Incendie</item>
        <item>Panne d\'ascenseur</item>
        <item>Panne électrique</item>
        <item>Personne armée</item>
        <item>Tremblement de terre</item>
        <item>Urgence médicale</item>
    </string-array>
    <string name="bomb_threat">
        <![CDATA[<h2>Si la menace est transmise par téléphone</h2>

<ul>
	<li>Ne mettez pas fin à la communication;</li>
	<li>Laissez l&rsquo;interlocuteur raccrocher en premier;</li>
	<li>Tentez d&rsquo;obtenir le maximum de renseignements;</li>
	<li>Faites répéter la personne ou prétextez avoir de la difficulté à l&rsquo;entendre afin de gagner du temps;</li>
	<li>Portez une attention particulière aux éléments suivants :
	<ul>
		<li>Sexe</li>
		<li>Âge</li>
		<li>Accent, langue parlée</li>
		<li>Tonalité de la voix (aiguë ou grave)</li>
		<li>Débit et émotions (fâché, calme, agité)</li>
		<li>Bruits dans l&rsquo;environnement<br />
		&nbsp;</li>
	</ul>
	</li>
	<li>Dans la mesure du possible et en fonction de la situation, tentez d&rsquo;obtenir les renseignements suivants :
	<ul>
		<li>L&rsquo;heure à laquelle la bombe explosera</li>
		<li>Le type de bombe</li>
		<li>Les personnes visées et le motif</li>
		<li>L&rsquo;emplacement de la bombe</li>
		<li>Le nom et le numéro qui apparaissent sur l&rsquo;afficheur du téléphone<br />
		&nbsp;</li>
	</ul>
	</li>
	<li>Communiquez&nbsp; avec la Sécurité au poste 55 (système téléphonique interne) pour signaler la situation et transmettre les renseignements pertinents;</li>
	<li>La Sécurité pourrait ensuite vous demander de vous rendre au centre des opérations de la sécurité, située à l&rsquo;entrée du Pavillon A.</li>
</ul>

<h3>Évacuation</h3>

<ul>
	<li>Attendez que la Sécurité ordonne l&rsquo;évacuation. Celle-ci doit inspecter les voies d&rsquo;évacuation pour s&rsquo;assurer qu&rsquo;il n&rsquo;y a pas de danger (colis suspect);</li>
	<li>Restez calme;</li>
	<li>Habillez-vous en fonction de la température extérieure, mais ne faites pas de&nbsp;détour pour récupérer vos vêtements (par exemple : n&rsquo;allez pas à votre casier);</li>
	<li>Évacuez l&rsquo;endroit par les escaliers de secours les plus près. N&rsquo;utilisez pas les&nbsp;ascenseurs;</li>
	<li>Éloignez-vous de l&rsquo;immeuble;</li>
	<li>Dirigez-vous vers le lieu de rassemblement;</li>
	<li>Ne retournez sous aucun prétexte à l&rsquo;intérieur.</li>
</ul>

<h3>Retour dans l&rsquo;immeuble</h3>

<ul>
	<li>Le retour dans l&rsquo;immeuble se fera dès que la Sécurité l&rsquo;autorisera;</li>
	<li>Cette autorisation sera communiquée au moyen d&rsquo;un porte-voix au lieu de rassemblement.</li>
</ul>
]]>
    </string>
</resources>